--- a/index.html
+++ b/index.html
@@ -1,10 +1,80 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>My Simple HTML Page</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Your Name - Developer</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f2f2f2;
+        }
+
+        header {
+            background-color: #333;
+            color: white;
+            text-align: center;
+            padding: 2rem 0;
+        }
+
+        header h1 {
+            font-size: 2rem;
+        }
+
+        .container {
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 20px;
+            background-color: white;
+            border-radius: 5px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+
+        .profile-pic {
+            width: 150px;
+            height: 150px;
+            border-radius: 50%;
+            margin: 0 auto;
+            display: block;
+        }
+
+        .profile-name {
+            font-size: 1.5rem;
+            margin-top: 1rem;
+        }
+
+        .profile-description {
+            font-size: 1rem;
+            margin: 1rem 0;
+        }
+
+        .social-links {
+            text-align: center;
+        }
+
+        .social-links a {
+            color: #333;
+            text-decoration: none;
+            margin: 0 1rem;
+        }
+    </style>
 </head>
 <body>
-    <h1>Hello, World!</h1>
-    <p>This is a simple HTML page.</p>
+    <header>
+        <h1>Your Name</h1>
+        <p>Web Developer</p>
+    </header>
+    <div class="container">
+        <img src="profile-pic.jpg" alt="Your Name" class="profile-pic">
+        <h2 class="profile-name">Your Name</h2>
+        <p class="profile-description">Web developer with a passion for creating beautiful and functional websites. Experienced in HTML, CSS, JavaScript, and more.</p>
+        <div class="social-links">
+            <a href="https://github.com/yourusername" target="_blank">GitHub</a>
+            <a href="https://linkedin.com/in/yourusername" target="_blank">LinkedIn</a>
+            <!-- Add more social links as needed -->
+        </div>
+    </div>
 </body>
 </html>
